--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,22 +1,23 @@
-- @admin = Profile.find_by_username("adham")
-.footer-contant.row
-  .contact
-    %p Contact me:
-    .admin
-      %a.admin-img{:href => "#{show_profile_path(@admin.username)}"}
-        = image_tag(@admin.avatar.url(:thumb), size: "64")
-      .admin-info
-        %a.name{:href => "#{show_profile_path(@admin.username)}"}= @admin.name
-        %a.email{:href => "mailto:admin@geekhub.io"}admin@geekhub.io
-        %p.who GEEKHUB Admin
+- if Profile.count > 0
+  - @admin = Profile.find_by_username("adham")
+  .footer-contant.row
+    .contact
+      %p Contact me:
+      .admin
+        %a.admin-img{:href => "#{show_profile_path(@admin.username)}"}
+          = image_tag(@admin.avatar.url(:thumb), size: "64")
+        .admin-info
+          %a.name{:href => "#{show_profile_path(@admin.username)}"}= @admin.name
+          %a.email{:href => "mailto:admin@geekhub.io"}admin@geekhub.io
+          %p.who GEEKHUB Admin
 
-  .follow
-    %p Follow GEEKHUB:
-    .links
-      %a.btn.btn-facebook-inversed{:href => "https://www.facebook.com/geekhub.io", target: "_blank"}
-        %span.ion-social-facebook
-      %a.btn.btn-twitter-inversed{:href => "https://www.twitter.com/geekhub_io", target: "_blank"}
-        %span.ion-social-twitter
+    .follow
+      %p Follow GEEKHUB:
+      .links
+        %a.btn.btn-facebook-inversed{:href => "https://www.facebook.com/geekhub.io", target: "_blank"}
+          %span.ion-social-facebook
+        %a.btn.btn-twitter-inversed{:href => "https://www.twitter.com/geekhub_io", target: "_blank"}
+          %span.ion-social-twitter
 
-.copyright.text-center
-  %p= "Copyright ©#{Date.today.year}, All Rights Reserved"
+  .copyright.text-center
+    %p= "Copyright ©#{Date.today.year}, All Rights Reserved"
