edit setting nav text

--- a/app/views/layouts/_setting_nav.html.haml
+++ b/app/views/layouts/_setting_nav.html.haml
@@ -5,7 +5,7 @@
       %li= link_to 'Profile', edit_profiles_path
       %li= link_to 'Work and Education', work_and_education_profiles_path
       %li= link_to 'Account settings', edit_user_registration_path
-      %li= link_to 'Edit skills', skills_profiles_path
-      %li= link_to 'Edit address', address_profiles_path
-      %li= link_to 'Edit linked accounts', linked_accounts_profiles_path
+      %li= link_to 'Skills', skills_profiles_path
+      %li= link_to 'Address', address_profiles_path
+      %li= link_to 'Linked accounts', linked_accounts_profiles_path
       -# %li= link_to 'Edit privacy', privacy_profiles_path
