--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -33,6 +33,35 @@
 
 :javascript
 
+    // var tour = new Tour({
+    //   steps: [
+    //   {
+    //     element: "#brand",
+    //     title: "Hi",
+    //     content: "Hi Geek i'm a hub for geeks like you, click next to continue the tour or click end tour to end it",
+    //     placement: 'bottom'
+    //   },
+    //   {
+    //     element: "#gps",
+    //     title: "Location search",
+    //     content: "You can searh for geeks by location try enter (cairo, egypt)"
+    //   },
+    //   {
+    //     element: ".selectize-input",
+    //     title: "Skills search",
+    //     content: "If you are looking for geek who know spasific skills you can enter this skills right heare"
+    //   }
+    // ]});
+    //
+    // $(function() {
+    //   // Initialize the tour
+    //   tour.init();
+    //
+    //   // Start the tour
+    //   tour.start();
+    // });
+
+
   //the map
   var profiles = #{@search.to_json};
 
