--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -11,6 +11,7 @@
   }
   #box-skills{
     padding: 5px;
+    padding-top:3px;
     margin-bottom: 0px;
   }
 
@@ -18,6 +19,7 @@
     padding-left: 5px;
     margin-top: -7px;
     padding-right: 5px;
+    padding-top: 3px;
     color: #747474;
     height: auto;
     overflow: hidden;
@@ -142,7 +144,7 @@
 
 .like-btn{
   @include box-shadow;
-  
+
   background-color: #EDECEB;
   float: right;
   margin-right: 5px;
